# MovieBingoCardMaker

./: README.md  bingo_card.html  main.py  pyproject.toml  requirements.txt  test.py
assets/: card.html
data/: cliches.csv  inthenameoftheking.csv
movieBingoCardMaker/: bingo_card.html  main.py
movieBingoCardMaker/assets/: cardTemplate.html
movieBingoCardMaker/data/: cliches.csv  free.csv  in_the_name_of_the_king.csv
movieBingoCardMaker/data/movie/: madame-web.csv
movieBingoCardMaker/export/: In The Name Of The King-0.html  In The Name Of The King-1.html  In The Name Of The King-2.html  Madame Web-0.html  Madame Web-1.html  Madame Web-2.html
