[tool.poetry]
name = "bingocardmaker"
version = "0.1.0"
description = ""
authors = ["npaisley <47052925+npaisley@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.2"
pyhtml2pdf = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
